# hume

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  pyproject_bkup.toml  readme.md  requirements.txt
config/: bridge.json  fractal.json  libero.json
experiments/libero/: README.md  eval_libero.py  requirements.txt
experiments/libero/scripts/: eval_libero.sh  libero_10.sh  libero_goal.sh  libero_object.sh  libero_spatial.sh
scripts/: env.sh  env_relaese.sh  eval_libero.sh  serve_policy.sh  train_s2.sh  train_vqh_s1.sh
src/hume/: __init__.py  array_typing.py  serve_policy.py
src/hume/models/: __init__.py  configuration_hume.py  fast_visuo_expert.py  modeling_hume.py  paligemma_with_expert.py  value_query.py
src/hume/serving/: __init__.py  websocket_policy_server.py
src/hume/training/: dataset.py  lerobot_patch.py  train_s2.py  train_vqh_s1.py  transforms.py
